make mobyle xml files conform and working
* errno headers added to source file

--- a/mobyle/Makefile.am
+++ b/mobyle/Makefile.am
@@ -20,10 +20,12 @@
 
 xmldir = $(pkgdatadir)/xml
 
-nodist_xml_DATA = imogene.xml
+nodist_xml_DATA = imogene.xml imogene_env.xml
 
 do_subst = sed -e 's,[@]PYTHON[@],$(PYTHON),g' -e 's,[@]pythondir[@],$(pythondir),g' -e 's,[@]bindir[@],$(bindir),g' -e 's,[@]PACKAGE_VERSION[@],$(PACKAGE_VERSION),g' -e 's,[@]PACKAGE_NAME[@],$(PACKAGE_NAME),g' -e 's,[@]PACKAGE[@],$(PACKAGE),g'
 
 imogene.xml: imogene.xml.in
 	$(do_subst) < $(srcdir)/imogene.xml.in > imogene.xml
 
+imogene_env.xml: imogene_env.xml.in
+	$(do_subst) < $(srcdir)/imogene_env.xml.in > imogene_env.xml
