--- a/mobyle/imogene.xml.in
+++ b/mobyle/imogene.xml.in
@@ -317,7 +317,7 @@ X 10000 11000 seq_name1
                </type>
                <format>
                   <code proglang="python">"echo \"Predicting enhancers...\";\
-                     imogene scangen -s " + species + " -w " + str(width) + " -t " + str(threeshold) + " -x " + str(extent) + " -m motifs.txt"</code>
+                     imogene scangen -s " + species + " -w " + str(width) + " -t " + str(threshold) + " -x " + str(extent) + " -m motifs.txt"</code>
                </format>
             </parameter>
 
