--- a/mobyle/imogene.xml.in
+++ b/mobyle/imogene.xml.in
@@ -236,8 +236,8 @@ X 10000 11000 seq_name1
             </parameter>
 
             <parameter isout="1">
-               <name>motiflogos</name>
-               <prompt>Motif logos</prompt>
+               <name>genoutput</name>
+               <prompt>General output</prompt>
                <type>
                   <datatype>
                      <class>Picture</class>
