--- a/configure.ac
+++ b/configure.ac
@@ -61,7 +61,7 @@ dnl Mobyle feature
 AC_ARG_ENABLE([mobyle],
               AS_HELP_STRING([--enable-mobyle], [Enable the creation of files related to the Mobyle interface]))
 
-AM_CONDITIONAL([ENABLE_MOBYLE], [test "x$enable_mobyle" = xyes])
+AM_CONDITIONAL([MOBYLE_OPT], [test "x$enable_mobyle" = xyes])
 
 AC_CONFIG_FILES([Makefile
                  scripts/Makefile
