results presentation update
* remove page layout
* imogene.xml display html (non fully functional yet)
* exit status fully corrected
* display mode to output logos

--- a/css/Makefile.am
+++ b/css/Makefile.am
@@ -1,3 +1,3 @@
 
 cssdir = $(pkgdatadir)/css
-dist_css_DATA = ie.css print.css screen.css genmot.css
+dist_css_DATA = ie.css print.css screen.css custom.css
