mobyle makefile correction

--- a/mobyle/Makefile.am
+++ b/mobyle/Makefile.am
@@ -34,7 +34,5 @@ htmldir = $(pkgdatadir)/help
 
 html_DATA = mobyle-help.html
 
-mobyle-help.html: help.md
-	markdown2 $(srcdir)/help.md > help.html
-	sed -e '/[@]CONTENT[@]/ r help.html' -e '/[@]CONTENT[@]/ d' $(top_srcdir)/css/pagelayout.html.in >$@
+EXTRA_DIST =  help.md
 
