--- a/mobyle/imogene.xml.in
+++ b/mobyle/imogene.xml.in
@@ -253,13 +253,13 @@ X 10000 11000 seq_name1
                <prompt>General output</prompt>
                <type>
                   <datatype>
-                     <class>Picture</class>
-                     <superclass>Binary</superclass>
+                     <class>GenmotReport</class>
+                     <superclass>Report</superclass>
                   </datatype>
                   <dataFormat>HTML</dataFormat>
                </type>
                <filenames>
-                  <code proglang="python">"display/results_genmot.html"</code>
+                  <code proglang="python">"results_genmot.html"</code>
                </filenames>
             </parameter> 
 
