--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,7 +19,7 @@
 #
 ## Process this file with automake to produce Makefile.in
 
-dist_noinst_DATA = display.ggo distinfo.ggo extract.ggo genmot.ggo imogene.ggo scangen.ggo
+dist_noinst_DATA = display.ggo distinfo.ggo extract.ggo genmot.ggo scangen.ggo
 
 extract_cmdline.c: extract.ggo
 	gengetopt --input=$(top_srcdir)/src/extract.ggo --func-name=extract_cmdline_parser \
@@ -33,10 +33,6 @@ display_cmdline.c: display.ggo
 	gengetopt --input=$(top_srcdir)/src/display.ggo --func-name=display_cmdline_parser \
    	--arg-struct-name=display_args_info --file-name=display_cmdline
 
-imogene_cmdline.c: imogene.ggo
-	gengetopt --input=$(top_srcdir)/src/imogene.ggo --func-name=imogene_cmdline_parser \
-   	--arg-struct-name=imogene_args_info --file-name=imogene_cmdline
-
 genmot_cmdline.c: genmot.ggo
 	gengetopt --input=$(top_srcdir)/src/genmot.ggo --func-name=genmot_cmdline_parser \
    	--arg-struct-name=genmot_args_info --file-name=genmot_cmdline
@@ -48,7 +44,7 @@ scangen_cmdline.c: scangen.ggo
 
 bin_PROGRAMS = imogene
 
-imogene_SOURCES = imogene_cmdline.c imogene_cmdline.h distinfo_cmdline.c distinfo_cmdline.h extract_cmdline.c extract_cmdline.h display_cmdline.c display_cmdline.h genmot_cmdline.c genmot_cmdline.h scangen_cmdline.c scangen_cmdline.h imogene.hpp imogene.cpp extract.cpp extract.hpp genmot.cpp genmot.hpp help.cpp help.hpp scangen.cpp scangen.hpp sequence.cpp sequence.hpp motif.cpp motif.hpp tree.cpp tree.hpp random.cpp random.hpp vectortypes.cpp const.cpp const.hpp vectortypes.hpp distinfo.cpp distinfo.hpp display.cpp display.hpp
+imogene_SOURCES = distinfo_cmdline.c distinfo_cmdline.h extract_cmdline.c extract_cmdline.h display_cmdline.c display_cmdline.h genmot_cmdline.c genmot_cmdline.h scangen_cmdline.c scangen_cmdline.h imogene.hpp imogene.cpp extract.cpp extract.hpp genmot.cpp genmot.hpp help.cpp help.hpp scangen.cpp scangen.hpp sequence.cpp sequence.hpp motif.cpp motif.hpp tree.cpp tree.hpp random.cpp random.hpp vectortypes.cpp const.cpp const.hpp vectortypes.hpp distinfo.cpp distinfo.hpp display.cpp display.hpp
 imogene_CPPFLAGS = -DDATA_PATH='"${pkgdatadir}"' -DPYTHON_PATH='"${pythondir}"'
 	   
 
