changes for interface
* align.dat with relative path
* imogene.xml with correct scangen paragraph
* weblogo with flags for output format
* imogene.xml with correct env var include

--- a/scripts/python/getalign-droso.py.in
+++ b/scripts/python/getalign-droso.py.in
@@ -239,7 +239,7 @@ lines=[]
 for fmavid in glob.glob('alignments/[0-9]*/mavid.mfa'):
    with open(fmavid) as mavid:
       line=mavid.readline().rstrip().split(" ")
-   line.append(os.getcwd()+"/"+fmavid)
+   line.append(fmavid)
    line[2]=int(line[2])
    lines.append(line[1:])
 
