--- a/mobyle/imogene_env.xml.in
+++ b/mobyle/imogene_env.xml.in
@@ -1,4 +1,6 @@
+<envlist>
 <env name="PATH">@bindir@</env>
 <!-- to be defined for customized alignment files 
  <env name="IMOGENE_DATA"></env>    
      -->
+</envlist>
