--- a/scripts/python/getalign-eutherian.py.in
+++ b/scripts/python/getalign-eutherian.py.in
@@ -211,7 +211,7 @@ for fmavid in glob.glob('alignments/chr*/*.fa'):
    if fmavid.split("/")[1]!="chrothers":
       with open(fmavid) as mavid:
          line=mavid.readline().rstrip().split(" ")
-      line.append(os.getcwd()+"/"+fmavid)
+      line.append(fmavid)
       line[2]=int(line[2])
       lines.append(line[1:])
 
