--- a/mobyle/imogene.xml.in
+++ b/mobyle/imogene.xml.in
@@ -175,9 +175,9 @@
             <text lang="en">list of sequence coordinates in the BED4 format:</text>
             <text lang="en">sequence_name chromosome_arm start_pos stop_pos</text>
           </comment>
-          <example>X 10000 11000 seq_name1
-2L 20000 23000 seq_name2
-3L 30000 35000 seq_name3</example>
+          <example>chrX 10000 11000 seq_name1
+chr2L 20000 23000 seq_name2
+chr3L 30000 35000 seq_name3</example>
         </parameter>
 
         <parameter ishidden="1">
