--- a/scripts/python/getalign-eutherian.py.in
+++ b/scripts/python/getalign-eutherian.py.in
@@ -123,7 +123,7 @@ except KeyError:
   datapath='@pkgdatadir@'
 
 if args.dest:
-  os.chdir(args.directory)
+  os.chdir(args.dest)
 else:
   os.chdir(datapath)
 
